# haskellbookexercises

./: BadMonad.hs  Chapter11Part13Exercises.hs  MyMonad.hs  Vagrantfile  addStuff.hs  applicativeInstances.hs  applicativeLookups.hs  arith2.hs  arith3Broken.hs  arith4.hs  artih4.hs  associativity.hs  chap6DetermineTypes.hs  chapter10database.hs  chapter10exercises.hs  chapter11BinaryTrees.hs  chapter11aspatterns.hs  chapter11hutton.hs  chapter11phoneexercise.hs  chapter12exercises.hs  chapter12mkPerson.hs  chapter12natural.hs  chapter13Exercises.hs  chapter2.hs  chapter4exercises.hs  chapter6exercises.hs  chapter6numberish.hs  chapter6show.hs  chapter6typematch.hs  chapter7.hs  chapter7caseexercises.hs  chapter7finalexercises.hs  chapter9Exercises.hs  cipher.hs  distribution.hs  fibs.hs  foo.hs  foo.js  functorHeavyLifting.hs  functors1.hs  (+27 more)
addition/: Addition.hs  addition.cabal
chapter14Exercises/: WordNumberTest.hs  exercises.cabal  exercises.hs  wordnumber.hs
chapter14Misc/: chapter14Misc.cabal
chapter14Misc/src/: CoArbitrary.hs  FirstArbitrary.hs
chapter15Exercises/: Trivial.hs  exercises.cabal
chapter16Exercises/: FuncInstances.hs  FuncInstancesTest.hs  TrivialTest.hs  exercises.cabal
chapter17Exercises/: ApplInstances.hs  exercises.cabal
chapter18Exercises/: ApplInstancesTest.hs  MonadInstances.hs  MonadInstancesTest.hs  exercises.cabal
chapter20exercises/: FoldableInstances.hs
chapter21exercises/: HttpStuff.hs  TraversableInstances.hs  TraversableInstancesTest.hs  exercises.cabal
chapter22exercises.hs/: ReaderPractice.hs  ReaderStuff.hs  WarmingUp.hs
chapter23Exercises/: MyState.hs  RandomExample.hs  RandomExample2.hs
chapter23Exercises/FizzBuzz/: FizzBuzz.cabal
chapter23Exercises/FizzBuzz/app/: Main.hs
chapter24exercises/Parsers/: Parsers.cabal  TextFractions.hs  stack.yaml
chapter24exercises/Parsers/app/: AltParsing.hs  BT.hs  DataIni.hs  LearnParsers.hs  Marshalling.hs  SemVer.hs  Text.Fractions.hs  TextFractions.hs
chapter25Exercises/: chapter25.hs
dev/: provision.sh
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
morse/tests/: tests.hs
orphan-instance/: Listy.hs  ListyInstances.hs
shawty/: shawty.cabal
shawty/app/: Main.hs
