name:                exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/chapter14Misc#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     MonadInstances
                     , MonadInstancesTest
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
                     , checkers
  default-language:    Haskell2010

