name:                Parsers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Parsers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Parsers-exe
  hs-source-dirs:      app
  main-is:             SemVer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tagsoup
                     , raw-strings-qq
                     , aeson
                     , scientific
                     , trifecta
                     , attoparsec
                     , parsec
                     , parsers
                     , hspec
                     , text
                     , time
                     , bytestring
                     , containers
                     , QuickCheck
                     , quickcheck-regex
                     , regex-tdfa
                     , fgl
  default-language:    Haskell2010

